--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,17 +38,19 @@ jobs:
       - name: Setup ARTIC environment
         uses: conda-incubator/setup-miniconda@v2
         with:
+          mamba-version: "*"
+          python-version: 3.6
           activate-environment: artic
           environment-file: environment.yml
-          python-version: 3.6
-          auto-activate-base: false
 
       - name: Print ARTIC environment
+        shell: bash -l {0}
         run: |
           conda info
           conda list
 
       - name: Install ARTIC pipeline
+        shell: bash -l {0}
         run: |
           pip install .
           artic --help
