--- a/environment.yml
+++ b/environment.yml
@@ -11,8 +11,6 @@ dependencies:
   - bwa=0.7.17
   - clint=0.5.1
   - htslib=1.10.2
-  - longshot=0.4.1
-  #- medaka=1.0.3
   - minimap2=2.17
   - multiqc
   - muscle=3.8
@@ -29,4 +27,4 @@ dependencies:
   - whatshap
   - parasail-python
   - pip:
-      - medaka==1.2.2rc1
+      - medaka==1.2.2
