--- a/environment.yml
+++ b/environment.yml
@@ -16,7 +16,7 @@ dependencies:
   - muscle=3.8
   - nanopolish=0.13.2
   - nomkl
-  - pandas=0.23.0
+  - pandas
   - pip
   - pysam=0.16.0.1
   - pytest
